# BPC-PC1T-zaverecnyProjekt

./: CMakeLists.txt  README.md  main.cpp  main.h
knihovny/: main.h  snakeLogic.cpp  snakeLogic.h
